Horizontal scroll issue fix

--- a/public/css/vod.css
+++ b/public/css/vod.css
@@ -294,3 +294,6 @@ a button {
 .listed-game-image img{
     width: 100%;
 }
+body{
+    overflow-x: hidden;
+}
